refactor: adjusts